# chefoodai-ai

./: .dockerignore  Dockerfile  Makefile  config.py  main.py  main_simple.py  pyproject.toml  pytest.ini  requirements.txt  startup.py
.github/workflows/: deploy.yml
ai/: __init__.py  ab_testing.py  cost_optimization.py  fallback_strategies.py  shopping_enhancement.py  vertex_integration.py
api/: __init__.py  app.py  middleware.py  models.py
api/routes/: __init__.py  health.py  recipes.py
tests/: __init__.py  conftest.py  test_api.py
